--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "mysql2": "^2.3.3"
+  },
   "devDependencies": {
     "express": "^4.17.1"
   }
