--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint-plugin-react": "^7.27.1",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
