--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
@@ -22,7 +23,6 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "express": "^4.17.1"
+    "eslint-plugin-react-hooks": "^4.3.0"
   }
 }
