--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/ --ext .js,.ts,.jsx,.tsx --ignore-pattern *.test.jsx --ignore-pattern *.test.tsx"
+    "lint": "eslint src/ --ext .js,.ts,.jsx,.tsx --ignore-pattern *.test.jsx --ignore-pattern *.test.tsx --resolve-plugins-relative-to ."
   },
   "eslintConfig": {
     "extends": [
