--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "lint": "eslint ./server.js MysqlOperations/"
+    "lint": "eslint . --ext .js --ignore-pattern *.test.js --ignore-pattern 'client/*' --resolve-plugins-relative-to ."
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,8 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.3"
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1"
   }
 }
