--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb": "^19.0.1",
     "express": "^4.17.1",
     "knex": "^0.95.14",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
